# gamezap

./: Cargo.toml  build.rs
models/: blade.mtl
shaders/: light.wgsl  shader.wgsl
src/: camera.rs  engine.rs  gamezap.rs  main.rs  model.rs  pipeline.rs  resources.rs  swapchain.rs  texture.rs  utils.rs  vulkan_engine.rs
src/shaders/: shader.wgsl
