[package]
name = "gamezap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
sdl2 = {git = "https://github.com/Rust-SDL2/rust-sdl2.git", features = ["raw-window-handle"]}
wgpu = "0.17.0"
anyhow = "1.0.72"
nalgebra = "0.32.3"
tobj = { version = "4.0.0", features = ["async"] }
cfg-if = "1.0.0"
instant = "0.1.12"

[build-dependencies]
anyhow = "1.0.72"
fs_extra = "1.3.0"
glob = "0.3.1"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
